[gd_scene load_steps=6 format=3 uid="uid://dka28gb7yodkv"]

[ext_resource type="Texture2D" uid="uid://bk1nva4mk6evm" path="res://assets/profile.png" id="1_3mhwe"]
[ext_resource type="Script" path="res://sub_scenes/player_info.gd" id="1_3v7lo"]
[ext_resource type="Theme" uid="uid://qfdcqsau4pfe" path="res://new_theme.tres" id="2_6cclq"]
[ext_resource type="Texture2D" uid="uid://c3y0vihjkod10" path="res://assets/GUI.png" id="2_mjhds"]
[ext_resource type="Texture2D" uid="uid://dsaskhku12b4q" path="res://assets/rall.png" id="3_72g4p"]

[node name="PlayerInfo" type="Node2D"]
script = ExtResource("1_3v7lo")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 181.0
offset_bottom = 50.0
scale = Vector2(4, 4)
texture = ExtResource("2_mjhds")
region_rect = Rect2(82, 98, 29, 28)
patch_margin_left = 9
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Profile" type="Node2D" parent="."]
position = Vector2(5, 14)
metadata/_edit_group_ = true

[node name="Profile_BackGround" type="Sprite2D" parent="Profile"]
position = Vector2(80.1905, 65.3333)
scale = Vector2(4.88095, 5.16667)
texture = ExtResource("1_3mhwe")
hframes = 3
frame = 2
region_rect = Rect2(28, 14, 0, 0)

[node name="Rall" type="Sprite2D" parent="Profile"]
position = Vector2(76, 61)
scale = Vector2(1.875, 1.875)
texture = ExtResource("3_72g4p")
hframes = 6

[node name="Profile_Front" type="Sprite2D" parent="Profile"]
position = Vector2(78, 64)
scale = Vector2(5.02381, 5.02381)
texture = ExtResource("1_3mhwe")
hframes = 3
region_rect = Rect2(28, 14, 0, 0)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 143.0
offset_right = 700.0
offset_bottom = 172.0
theme = ExtResource("2_6cclq")
max_value = 20.0
step = 0.1
fill_mode = 1
show_percentage = false

[node name="PlayerName" type="Label" parent="."]
offset_left = 156.0
offset_top = 88.0
offset_right = 245.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 25
text = "Player2"

[node name="Timer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 282.0
offset_top = 25.0
offset_right = 486.0
offset_bottom = 85.0
grow_horizontal = 2
theme = ExtResource("2_6cclq")
theme_override_font_sizes/font_size = 25
text = "SET"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
